--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASSWORD=prueba123
 DB_NAME=encode_text
 DB_CONNECTION_LIMIT=10
 SESSION_SECRET=123456789101213141516
+ACCESS_TOKEN_SECRET=3202i42i94j2394j2i
